--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tanstack/react-query": "^5.69.0",
+    "axios": "^1.8.4",
     "expo": "~52.0.40",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
@@ -39,6 +41,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -47,6 +50,7 @@
     "react-native-reanimated": "~3.16.2",
     "react-native-redash": "^18.1.3",
     "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
