--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.2.3",
     "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.4",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -69,7 +70,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/cli": "^0.22.21",
+    "@expo/cli": "^0.22.22",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
